--- a/style.css
+++ b/style.css
@@ -10,17 +10,17 @@ body {
 }
 
 .pimg1 {
-    background-image: url( images/1.jpg);
+    background-image: url(1.jpg);
     min-height: 100%;
 }  
 
 .pimg2 {
-    background-image: url( images/2.jpg);
+    background-image: url(2.jpg);
     min-height: 900px;
 }  
 
 .pimg3 {
-    background-image: url( images/3.jpg);
+    background-image: url(3.jpg);
     min-height: 900px;
 }  
 
